# optom-automator

./: .coverage  .pre-commit-config.yaml  BODY.md  CHANGELOG.md  LICENSE  Pipfile  README.MD  copy_pyproject.toml  main.py  makefile  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: build.yml  bumpversion.yml
src/optom_automation/: main.py
src/optom_automation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/optom_automation/instruction/: __init__.py  instruction.py  phrases.py
src/optom_automation/utils/: __init__.py  phrases.py
src/optom_automator/: __init__.py  __main__.py  main.py
src/optom_automator/phrases/: __init__.py  exceptions.py  phrase_tree.py  phrases.py  types.py
src/optom_automator/reader/: __init__.py  exceptions.py  reader.py
src/optom_automator/utils/: logger.py
tests/: __init__.py  conftest.py  test_instruction.py  test_main.py  test_phrases.py  test_reader.py
