[build-system]
requires = ["setuptools >= 62.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optom_automator"
version = "0.1.0"
requires-python = ">=3.10"
description = "Automating the boring stuff in optometry."
readme = "README.md"
license = { file = "LICENSE", text = "MIT License" }
dependencies = ["pyttsx3", "rich"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython",
]

[project.scripts]
my-script = "optom_automator.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["optometry_automator*"]
exclude = ["tests"]

[tool.pyright]
include = "src"
venv = ".venv"
venvPath = "."

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
default_section = "THIRDPARTY"
known_first_party = ["optom_automator"]
known_third_party = ["pytest", "pyttsx3", "rich", "setuptools"]

[tool.black]
line-length = 79
include = '.pyi?%'

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report html"
testpaths = ["tests"]

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true

[tool.pydocstyle]
match = '.*\.py'

[tool.commitizen]
name = "cz_conventional_commits"
version_files = ["src/optom_automator/__init__.py", "pyproject.toml"]
version = "0.1.0"

tag_format = "$version"
