[metadata]
name = optom_automation
version = 0.1.0
description = Automate optometry
long_description = file: README.md
long_description_content_type = text/markdown
author = Shivan Sivakumaran
license = MIT
license_file = LICENSE
platforms = MacOS
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = optom_automation
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8
    mypy
    pytest
    pytest-cov

[flake8]
max-line-length = 79
max-complexity = 12
ignore = E501, W503, E203
per-file-ignores = __init__.py:F401
