[metadata]
name = optom_automation
version = 0.1.0
description = Automate optometry
long_description = file: README.MD
long_description_content_type = text/markdown
author = Shivan Sivakumaran
license = MIT
license_file = LICENSE
license_files = LICENSE
platforms = MacOS
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = optom_automation
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8
    mypy
    pytest
    pytest-cov

[flake8]
max-line-length = 79
max-complexity = 12
ignore = E501, W503, E203
per-file-ignores = __init__.py:F401
